src/test/resources/30/expanded/invalid/data-nav-regionbased-notfxl/EPUB/data-nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
    xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>Data Navigation Document</title>
    </head>
    <body>
        <nav epub:type="region-based">
            <ol>
                <li>
                    <a href="page1.xhtml#xywh=percent:5,5,15,15"></a>
                </li>
            </ol>
        </nav>
    </body>
</html>
